align form inputs; fix: error msgs into ion-segment el

--- a/src/components/order-form/order-form.scss
+++ b/src/components/order-form/order-form.scss
@@ -6,10 +6,24 @@ order-form {
     border: 1px solid #ccc;
     margin: 0 8px;
   }
+
+  %margin {
+    margin: 8px;
+  }
+
   form {
-    padding: 15px;
     ion-input {
       @extend %input-select;
+    }
+    ion-select {
+      @extend %input-select;
+    }
+    ion-segment {
+      div {
+        &.order-form-errors {
+          width: 50%;
+        }
+      }
     }
     div {
       &.order-form-errors {
@@ -44,9 +58,24 @@ order-form {
       }
     }
     button {
-      p {
+      &.order-button {
+        @extend %margin;
+        padding: 17px;
+        border-radius: 3px;
+        background-color: #1b1b1b;
+        color: #fff;
+      }
+      span {
+        font-weight: 700;
+        font-family: Helvetica, sans-serif;
+        font-size: 16px;
         &.block {
           display: block;
+          margin-top: 5px;
+          font-size: 11px;
+          font-weight: 400;
+          opacity: 0.6;
+          font-family: 'Source Sans Pro', sans-serif;
         }
       }
     }
